--- a/src/sass/components/_variables.scss
+++ b/src/sass/components/_variables.scss
@@ -26,11 +26,11 @@ $gray-100: #F9F9F9 !default;
 $gray-200: #F1F1F4 !default;
 $gray-300: #DBDFE9 !default;
 $gray-400: #C4CADA !default;
-$gray-500: #99A1B7 !default;
+$gray-500: #525866 !default;
 $gray-600: #78829D !default;
 $gray-700: #4B5675 !default;
 $gray-800: #252F4A !default;
-$gray-900: #071437 !default;
+$gray-900: #0A0D14 !default;
  
 // Bootstrap muted color
 $text-muted: $gray-500 !default;
@@ -50,8 +50,8 @@ $grays: (
 
 // Bootstrap contextual colors
 // Primary colors
-$primary:						#1B84FF !default;
-$primary-active:				#056EE9 !default;
+$primary:						#E74238 !default;
+$primary-active:				#ff453b !default;
 $primary-light: 				#E9F3FF !default;
 $primary-clarity: 				rgba(#1B84FF, 0.2) !default;
 $primary-inverse: 				$white !default; 
