--- a/src/sass/components/core-components.scss
+++ b/src/sass/components/core-components.scss
@@ -32,7 +32,9 @@
 @import "code";
 @import "forms";
 @import "progress";
+@import "progressbar";
 @import "tables";
+@import "tab";
 @import "popover";
 @import "tooltip";
 @import "accordion";
