--- a/src/sass/components/_variables.scss
+++ b/src/sass/components/_variables.scss
@@ -22,10 +22,10 @@ $white: #ffffff !default;
 $black:#000000 !default;
 
 // Bootstrap grey colors
-$gray-100: #F9F9F9 !default;
+$gray-100: #F6F8FA !default;
 $gray-200: #F1F1F4 !default;
 $gray-300: #DBDFE9 !default;
-$gray-400: #C4CADA !default;
+$gray-400: #868C98 !default;
 $gray-500: #525866 !default;
 $gray-600: #78829D !default;
 $gray-700: #4B5675 !default;
